--- a/index.html
+++ b/index.html
@@ -1,64 +1,113 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>殆知阁古文全集</title>
     <style>
+        /* 全局样式 */
         body {
             font-family: Arial, sans-serif;
-            margin: 2em;
+            margin: 0;
+            padding: 0;
+            line-height: 1.6;
+            background-color: #f9f9f9;
+            color: #333;
         }
-        ul {
-            list-style: none;
-            padding-left: 1em;
+
+        /* 导航栏样式 */
+        nav {
+            display: flex;
+            justify-content: center;
+            background-color: #4CAF50;
+            padding: 10px 0;
         }
-        li {
-            margin: 0.5em 0;
-        }
-        a {
-            color: #0366d6;
+
+        nav a {
             text-decoration: none;
+            color: white;
+            font-size: 18px;
+            margin: 0 15px;
+            padding: 5px 10px;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
         }
-        a:hover {
-            text-decoration: underline;
+
+        nav a:hover {
+            background-color: #45a049;
         }
-        footer {
-            margin-top: 2em;
-            border-top: 1px solid #ccc;
-            padding-top: 1em;
+
+        /* 随机页面区域 */
+        .random-section {
+            max-width: 1200px;
+            margin: 20px auto;
+            padding: 20px;
+            background-color: white;
+            border-radius: 8px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+
+        .random-section h2 {
+            text-align: center;
+            margin-bottom: 20px;
+            color: #4CAF50;
+        }
+
+        .random-links {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+            gap: 15px;
+        }
+
+        .random-links li {
+            background-color: #f1f1f1;
+            padding: 15px;
+            border-radius: 5px;
+            text-align: center;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+
+        .random-links a {
+            text-decoration: none;
+            color: #333;
+            font-weight: bold;
+            transition: color 0.3s ease;
+        }
+
+        .random-links a:hover {
+            color: #4CAF50;
         }
     </style>
 </head>
 <body>
-    <h1>📚 殆知阁古文全集</h1>
-    <ul>
-        <li>📁 <a href="佛藏/index.html">佛藏</a></li>
-        <li>📁 <a href="儒藏/index.html">儒藏</a></li>
-        <li>📁 <a href="医藏/index.html">医藏</a></li>
-        <li>📁 <a href="史藏/index.html">史藏</a></li>
-        <li>📁 <a href="子藏/index.html">子藏</a></li>
-        <li>📁 <a href="易藏/index.html">易藏</a></li>
-        <li>📁 <a href="艺藏/index.html">艺藏</a></li>
-        <li>📁 <a href="诗藏/index.html">诗藏</a></li>
-        <li>📁 <a href="道藏/index.html">道藏</a></li>
-        <li>📁 <a href="集藏/index.html">集藏</a></li>
-    </ul>
+    <!-- 导航栏 -->
+    <nav>
+        <a href="佛藏/index.html">📁 佛藏</a>
+        <a href="儒藏/index.html">📁 儒藏</a>
+        <a href="医藏/index.html">📁 医藏</a>
+        <a href="史藏/index.html">📁 史藏</a>
+        <a href="子藏/index.html">📁 子藏</a>
+        <a href="易藏/index.html">📁 易藏</a>
+        <a href="艺藏/index.html">📁 艺藏</a>
+        <a href="诗藏/index.html">📁 诗藏</a>
+        <a href="道藏/index.html">📁 道藏</a>
+        <a href="集藏/index.html">📁 集藏</a>
+    </nav>
 
-    <!-- 随机链接部分 -->
-    <footer>
-        <h2>💡 随机推荐</h2>
-        <ul id="random-links"></ul>
-    </footer>
+    <!-- 随机页面区域 -->
+    <section class="random-section">
+        <h2>💡 50 个随机页面</h2>
+        <ul id="random-links" class="random-links"></ul>
+    </section>
 
     <script>
-        // 获取 random_pages 文件夹中的所有 JSON 文件名
+        // 获取 random_pages/files.json 中的文件列表
         function fetchRandomPagesFiles() {
-            return fetch('random_pages/', { method: 'GET' })
+            return fetch('/random_pages/files.json', { method: 'GET' })
                 .then(response => {
                     if (!response.ok) {
                         throw new Error(`HTTP error! status: ${response.status}`);
                     }
-                    // 假设服务器返回的是一个包含文件名的 JSON 列表
                     return response.json();
                 })
                 .catch(error => {
@@ -69,7 +118,7 @@
 
         // 从指定的 JSON 文件中加载数据
         function fetchRandomPagesData(filename) {
-            return fetch(`random_pages/${filename}`, { method: 'GET' })
+            return fetch(`/random_pages/${filename}`, { method: 'GET' })
                 .then(response => {
                     if (!response.ok) {
                         throw new Error(`HTTP error! status: ${response.status}`);
@@ -82,30 +131,29 @@
                 });
         }
 
-        // 从页面列表中随机选择 10 个链接
-        function getRandomLinks(pages, count = 10) {
+        // 从页面列表中随机选择 50 个链接
+        function getRandomLinks(pages, count = 49) {
             if (pages.length === 0) throw new Error('没有找到任何链接');
             const shuffled = pages.sort(() => 0.5 - Math.random()); // 随机打乱数组
-            return shuffled.slice(0, count); // 取前 10 个
+            return shuffled.slice(0, count); // 取前 50 个
         }
 
-        // 主逻辑：动态获取文件列表并随机选择一个 JSON 文件，从中选择 10 个链接
+        // 主逻辑：动态获取文件列表并随机选择一个 JSON 文件，从中选择 50 个链接
         document.addEventListener('DOMContentLoaded', () => {
             fetchRandomPagesFiles()
                 .then(files => {
                     if (files.length === 0) throw new Error('没有找到任何 JSON 文件');
-                    // 过滤出以 .json 结尾的文件
                     const jsonFiles = files.filter(file => file.endsWith('.json'));
                     if (jsonFiles.length === 0) throw new Error('没有找到任何 JSON 文件');
                     const randomFile = jsonFiles[Math.floor(Math.random() * jsonFiles.length)];
                     return fetchRandomPagesData(randomFile);
                 })
                 .then(pages => {
-                    const randomLinks = getRandomLinks(pages, 10); // 随机选择 10 个链接
+                    const randomLinks = getRandomLinks(pages, 49); // 随机选择 50 个链接
                     const randomLinksContainer = document.getElementById('random-links');
                     randomLinks.forEach(page => {
                         const li = document.createElement('li');
-                        li.innerHTML = `📄 <a href="${page.url}">${page.name}</a>`;
+                        li.innerHTML = `<a href="${page.url}">${page.name}</a>`;
                         randomLinksContainer.appendChild(li);
                     });
                 })
